fdo#74479: Treat empty cells as if they have a value of 0.

Change-Id: I3701848016c230138e8791f683a2c8b97219198d
(cherry picked from commit 295869ce95c00a0e0b192ea6bf62753f91badaf2)